--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -10,6 +10,7 @@
 
 a {
   color: inherit;
+  display: inline-block;
   text-decoration: none;
 }
 
